--- a/index.html
+++ b/index.html
@@ -5,10 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Mail Generator</title>
 </head>
 
 <body>
+    <section class="messages">
+        <h2 class="messages_title">Welcomes</h2>
+        <div class="messages_wrapper">
+            <div class="messages_message"></div>
+            <div class="messages_message"></div>
+            <div class="messages_message"></div>
+            <div class="messages_message"></div>
+        </div>
+    </section>
+    <section class="messages">
+        <h2 class="messages_title">Content</h2>
+        <div class="messages_wrapper">
+            <div class="messages_message"></div>
+            <div class="messages_message"></div>
+            <div class="messages_message"></div>
+            <div class="messages_message"></div>
+        </div>
+    </section>
+    <section class="messages">
+        <h2 class="messages_title">Regards</h2>
+        <div class="messages_wrapper">
+            <div class="messages_message"></div>
+            <div class="messages_message"></div>
+            <div class="messages_message"></div>
+            <div class="messages_message"></div>
+        </div>
+    </section>
     <textarea class="message"></textarea>
 </body>
 
