add some styles

--- a/index.html
+++ b/index.html
@@ -13,33 +13,35 @@
 </head>
 
 <body>
+    <h1 class="title">Welcome to mail generator!</h1>
     <section class="messages">
         <h2 class="messages_title">Welcomes</h2>
         <div class="messages_wrapper">
-            <div class="messages_message"></div>
-            <div class="messages_message"></div>
-            <div class="messages_message"></div>
-            <div class="messages_message"></div>
+            <div class="messages_message">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            <div class="messages_message">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            <div class="messages_message">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            <div class="messages_message">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
         </div>
     </section>
     <section class="messages">
         <h2 class="messages_title">Content</h2>
         <div class="messages_wrapper">
-            <div class="messages_message"></div>
-            <div class="messages_message"></div>
-            <div class="messages_message"></div>
-            <div class="messages_message"></div>
+            <div class="messages_message">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            <div class="messages_message">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            <div class="messages_message">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            <div class="messages_message">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
         </div>
     </section>
     <section class="messages">
         <h2 class="messages_title">Regards</h2>
         <div class="messages_wrapper">
-            <div class="messages_message"></div>
-            <div class="messages_message"></div>
-            <div class="messages_message"></div>
-            <div class="messages_message"></div>
+            <div class="messages_message">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            <div class="messages_message">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            <div class="messages_message">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            <div class="messages_message">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
         </div>
     </section>
+    <h2 class="title">Your message</h2>
     <textarea class="message"></textarea>
 </body>
 
