add some RWD styles

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="messages_message">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
         </div>
     </section>
-    <h2 class="title">Your message</h2>
+    <h2 class="messages_title">Your message</h2>
     <textarea class="message"></textarea>
 </body>
 
