add some RWD styles

--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
     <h2 class="messages_title">Your message</h2>
     <textarea class="message"></textarea>
 </body>
+<script src="data.js"></script>
 
 </html>
