--- a/index.html
+++ b/index.html
@@ -16,21 +16,15 @@
     <h1 class="title">Welcome to mail generator!</h1>
     <section class="messages">
         <h2 class="messages_title">Welcomes</h2>
-        <div class="messages_wrapper welcomes">
-
-        </div>
+        <div class="messages_wrapper welcomes"></div>
     </section>
     <section class="messages">
         <h2 class="messages_title">Content</h2>
-        <div class="messages_wrapper content">
-
-        </div>
+        <div class="messages_wrapper content"></div>
     </section>
     <section class="messages">
         <h2 class="messages_title">Regards</h2>
-        <div class="messages_wrapper regards">
-
-        </div>
+        <div class="messages_wrapper regards"></div>
     </section>
     <h2 class="messages_title">Your message</h2>
     <textarea class="message"></textarea>
