add copy and clear buttons

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     </section>
     <h2 class="messages_title">Your message</h2>
     <textarea class="message"></textarea>
+    <div class="buttons">
+        <button class="buttons_button">Copy content</button>
+        <button class="buttons_button buttons_button--clear">Clear</button>
+    </div>
 </body>
 <script src="data.js"></script>
 
