--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h2 class="messages_title">Your message</h2>
     <textarea class="message"></textarea>
     <div class="buttons">
-        <button class="buttons_button">Copy content</button>
+        <button class="buttons_button buttons_button--copy">Copy content</button>
         <button class="buttons_button buttons_button--clear">Clear</button>
     </div>
 </body>
